--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -17,7 +17,7 @@
 	<body>
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
-			<div class="left"><%- include('../../layout/adminSidebar') %></div>
+			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<div class="preview">
 					<h1 class="mb-5">Student Testimonials</h1>
