--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -18,7 +18,7 @@
   <body>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
-      <div class="left"><%- include('../../layout/adminSidebar') %></div>
+      <div class="left"><%- include('../../layout/adminSideBar') %></div>
       <div class="right">
         <div class="preview">
           <h1 class="mb-5">Latest Updates</h1>
