--- a/views/admin/home/neetAchievements.ejs
+++ b/views/admin/home/neetAchievements.ejs
@@ -16,7 +16,7 @@
   <body>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
-      <div class="left"><%- include('../../layout/adminSidebar') %></div>
+      <div class="left"><%- include('../../layout/adminSideBar') %></div>
       <div class="right">
         <div class="preview">
           <h1 class="mb-5">Neet Achievements</h1>
