--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -30,7 +30,7 @@
 		</div>
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
-			<div class="left"><%- include('../../layout/adminSidebar') %></div>
+			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<div class="preview">
 					<h1 class="mb-5">Our Toppers</h1>
