--- a/views/admin/results/images.ejs
+++ b/views/admin/results/images.ejs
@@ -30,7 +30,7 @@
 		</div>
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
-			<div class="left"><%- include('../../layout/adminSidebar') %></div>
+			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<form
 					action="/admin/results/images"
