--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -14,8 +14,8 @@
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 	</head>
 	<body>
+		<%- include('./layout/header') %>
 		<%- include('./chatbot') %>
-
 		<section class="secMain">
 			<img class="vector" src="../images/successStories/Vector8.png" alt="" />
 			<div class="cardMain">
