--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -19,7 +19,7 @@
 				xmlns="http://www.w3.org/2000/svg"
 				width="25"
 				height="25"
-				fill="#000"
+				fill="#fff"
 				class="bi bi-x-lg closesvg"
 				viewBox="0 0 16 16"
 			>
