--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,6 +45,7 @@
 			</svg>
 			<!-- slideshow -->
 			<!-- Swiper -->
+			<%# console.log(success); %> 
 
 			<section class="home">
 				<div class="homeLeft">
@@ -434,3 +435,6 @@
 		<script src="javascripts/chatbot.js"></script>
 	</body>
 </html>
+
+
+
