--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -174,7 +174,14 @@
 						<a
 							href="/admin/successstories/testimonials"
 							class="link-dark rounded ahover"
-							>Testimonials</a
+							>Student Testimonials</a
+						>
+					</li>
+					<li>
+						<a
+							href="/admin/successstories/parenttestimonials"
+							class="link-dark rounded ahover"
+							>Parent Testimonials</a
 						>
 					</li>
 				</ul>
