--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
 		<link rel="stylesheet" href="../../stylesheets/admin.css" />
-		<link rel="stylesheet" href="sweetalert2.min.css">
+		<link rel="stylesheet" href="sweetalert2.min.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
