--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,9 +19,9 @@
       <div class="name">
         <h1>LOGIN</h1>
       </div>
-      <div class="Username">
+      <div class="Username" >
         <label for="username">Enter your username</label>
-        <input type="text" placeholder="Username" name="username" id="username" />
+        <input type="text" placeholder="Username" name="username" id="username" autofocus/>
       </div>
       <div class="Username">
         <label for="password">Enter your password</label>
