--- a/views/admin/successstories/testimonials.ejs
+++ b/views/admin/successstories/testimonials.ejs
@@ -33,7 +33,7 @@
       <div class="left"><%- include('../../layout/adminSideBar') %></div>
       <div class="right">
         <div class="preview">
-          <h1 class="mb-5">Success Stories</h1>
+          <h1 class="mb-5">Student Testimonials</h1>
           <form
             action="/admin/successstories/testimonials"
             method="post"
@@ -94,7 +94,7 @@
           method="post"
           class="imgform"
         >
-          <h1 class="m-5">Sucess Stories</h1>
+          <h1 class="m-5">Student Testimonials</h1>
  
           <table class="table" style="width: 70%">
             <thead>
