--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -15,7 +15,7 @@
               Super Admin
             </a>
             <ul class="dropdown-menu justify-content-end" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Signout</a></li>
+              <li><a class="dropdown-item" href="/logout">Signout</a></li>
             </ul>
           </li>
         </ul>
