--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -30,7 +30,7 @@
 						<div class="input-group flex-nowrap" style="width: 80%">
 							<span class="input-group-text" id="addon-wrapping">Add News</span>
 							<input
-								type="text"
+								type="url"
 								name="uploadlink"
 								class="form-control"
 								aria-label="Username"
@@ -72,7 +72,7 @@
 							<tr>
 								<td>
 									<input
-										type="text"
+										type="url"
 										id="linkinput"
 										value="<%= i %>"
 										readonly
