--- a/views/admin/demovideos/Demovideos.ejs
+++ b/views/admin/demovideos/Demovideos.ejs
@@ -32,7 +32,7 @@
             <div class="input-group flex-nowrap" style="width: 80%">
               <span class="input-group-text" id="addon-wrapping">Add News</span>
               <input
-                type="text"
+                type="url"
                 name="uploadlink"
                 class="form-control"
                 aria-label="Username"
@@ -73,7 +73,7 @@
               <tr>
                 <td>
                   <input
-                    type="text"
+                    type="url"
                     id="linkinput"
                     value="<%= i %>"
                     readonly
