--- a/views/admin/successstories/parenttestimonial.ejs
+++ b/views/admin/successstories/parenttestimonial.ejs
@@ -56,7 +56,7 @@
             <div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
               <span class="input-group-text" id="addon-wrapping">Add Youtubelink</span>
               <input
-                type="text"
+                type="url"
                 name="youtubelink"
                 class="form-control"
                 aria-label="Username"
