--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -170,7 +170,7 @@
           </table>
           <div class="buttondiv">
             <button type="button" class="btn btn-outline-primary addbtn px-4">
-              Update
+              Add
             </button>
             <button
               type="button"
