--- a/views/results.ejs
+++ b/views/results.ejs
@@ -48,7 +48,7 @@
         <div
           class="refbox"
           data-name="<%= student.name %>"
-          data-score="<%= student.score %>"
+          data-score="<%= student.collegename %>"
           data-img="<%= student.studentimg %>"
         ></div>
         <% }) %>
