--- a/views/admin/successstories/testimonials.ejs
+++ b/views/admin/successstories/testimonials.ejs
@@ -110,7 +110,7 @@
               <tr>
                 <td>
                   <p class="onclickimg"><%= i.studentimg %></p>
-                  <span class="currentPreviewSpan btn btn-info"
+                  <span class="currentPreviewSpan btn btn-info" 
                     >Show Image</span
                   >
                   <span class="currentSliderimgurl"><%= i.studentimg %></span>
@@ -148,6 +148,7 @@
       </div>
       <div></div>
     </section>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
