--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -143,7 +143,7 @@
 						<button type="button" class="btn btn-outline-primary addbtn px-4">
 							Add
 						</button>
-						<button class="btn btn-outline-danger submit ms-5 px-3 submitbtn">
+						<button class="btn btn-outline-danger submit ms-5 px-3 submitbtn" disabled>
 							Delete
 						</button>
 					</div>
