--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -174,6 +174,7 @@
             </button>
             <button
               type="button"
+              disabled
               class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
             >
               Delete
