--- a/views/admin/demovideos/Demovideos.ejs
+++ b/views/admin/demovideos/Demovideos.ejs
@@ -16,7 +16,11 @@
     />
   </head>
   <body>
-    <a href="#buttonid"><img class="downarrow" src="https://img.icons8.com/material-rounded/96/000000/low-importance.png"/></a>
+    <a href="#buttonid"
+      ><img
+        class="downarrow"
+        src="https://img.icons8.com/material-rounded/96/000000/low-importance.png"
+    /></a>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSideBar') %></div>
@@ -100,6 +104,7 @@
             </button>
             <button
               type="button"
+              disabled
               class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
             >
               Delete
@@ -111,6 +116,7 @@
     <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.js" integrity="sha512-K3MtzSFJk6kgiFxCXXQKH6BbyBrTkTDf7E6kFh3xBZ2QNMtb6cU/RstENgQkdSLkAZeH/zAtzkxJOTTd8BqpHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    <script src="../../javascripts/admin/Demovideos/Demovideos.js"></script>
     <script src="../../javascripts/admin/home/LatestUpdates.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
