--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -140,6 +140,7 @@
             </button>
             <button
               type="submit"
+              disabled
               class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
             >
               Delete
