--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,6 +15,7 @@
 		/>
 		<link rel="stylesheet" href="stylesheets/homepage.css" />
 		<link rel="stylesheet" href="stylesheets/common.css" />
+		<link rel="stylesheet" href="stylesheets/nav.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -430,6 +431,7 @@
 		></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 		<!-- <script src="javascripts/index.js"></script> -->
+		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/common.js"></script>
 		<script src="javascripts/chatbot.js"></script>
 	</body>
