--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -222,7 +222,7 @@
 						<a
 							href="/admin/results/studentdetails"
 							class="link-dark rounded ahover"
-							>Studdent Details</a
+							>Student Details</a
 						>
 					</li>
 				</ul>
