--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -8,11 +8,11 @@
 				class="btn btn-toggle align-items-center rounded collapsed fs-5"
 				data-bs-toggle="collapse"
 				data-bs-target="#home-collapse"
-				aria-expanded="true"
+				aria-expanded="false"
 			>
 				<b>Home</b>
 			</button>
-			<div class="collapse show" id="home-collapse">
+			<div class="collapse" id="home-collapse">
 				<ul
 					class="
 						btn-toggle-nav
@@ -222,7 +222,7 @@
 						<a
 							href="/admin/results/studentdetails"
 							class="link-dark rounded ahover"
-							>Studdent Details</a
+							>Student Details</a
 						>
 					</li>
 				</ul>
@@ -242,3 +242,5 @@
       </li> -->
 	</ul>
 </div>
+
+<script src="../../javascripts/admin/header.js"></script>
