--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -31,7 +31,7 @@
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
-			<div class="right">
+			<div class="right" style="height: fit-content;">
 				<div class="preview">
 					<h1 class="mb-5">Student Details</h1>
 					<form
