--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -139,7 +139,7 @@
               Add
             </button>
             <button
-              type="submit"
+              type="button"
               disabled
               class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
             >
