--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -159,6 +159,7 @@
               Add
             </button>
             <button
+            type="button"
               class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
               disabled
             >
