--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -38,6 +38,7 @@ a.site-logo {
   padding: 0;
   list-style: none;
   display: flex;
+  align-items: center;
 }
 .site-navbar ul li a {
   color: #1e2886;
