--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -175,6 +175,7 @@ a.site-logo {
   .site-navbar ul li a {
     padding: 25px;
     font-size: 3.5rem;
+    color: white;
   }
   .site-navbar ul li a:hover {
     background-color: rgba(255, 255, 255, 0.1);
@@ -243,6 +244,7 @@ a.site-logo {
   .site-navbar ul li a {
     padding: 25px;
     font-size: 1.5rem;
+    color: white;
   }
   .site-navbar ul li a:hover {
     background-color: rgba(255, 255, 255, 0.1);
