--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,11 +33,11 @@
 
 					<section class="home">
 						<div class="homeLeft">
-							<img class="building" src="images/home/arch doodle.png" alt="" />
+							<!-- <img class="building" src="images/home/arch doodle.png" alt="" /> -->
 							<!-- <img class="building2" src="images/build2.png" alt="" />
 					<img class="building3" src="images/home/blobWhite.png" alt="" /> -->
 							<div class="spilldiv">
-								<img class="blob1" src="images/home/spill.png" alt="" />
+								<img class="blob1" src="images/home/blob_big.png" alt="" />
 							</div>
 							<img class="blob2" src="images/home/blob3final.png" alt="" />
 
