--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -256,11 +256,12 @@
         /></a>
       </div> -->
 		</section>
+		<%- include('./layout/footer') %>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/common.js"></script>
 		<script src="javascripts/aboutus.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="javascripts/pagination.js"></script>
-		<%- include('./layout/footer') %>
 		<script src="javascripts/chatbot.js"></script>
 	</body>
 </html>
