--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -78,22 +78,21 @@
 							<label for="name">Name</label>
 							<input
 								type="text"
-								name="name"								
+								name="name"
 								class="form-input name-input"
 								id="name"
-								
 							/>
 							<div class="nameError"></div>
 						</div>
 						<div class="input-container">
-							<label for="phone">Phone number <span style="color: red;">*</span></label>
+							<label for="phone"
+								>Phone number <span style="color: red">*</span></label
+							>
 							<input
 								type="text"
 								name="phone"
 								class="form-input phonenum"
 								id="phone"
-								
-								
 							/>
 							<div class="phoneError"></div>
 						</div>
@@ -104,7 +103,6 @@
 								name="email"
 								class="form-input email-input"
 								id="email"
-								
 							/>
 							<div class="emailError"></div>
 						</div>
@@ -114,7 +112,6 @@
 								name="message"
 								class="form-input comment-input"
 								id="message"
-								
 							></textarea>
 							<div class="commentError"></div>
 						</div>
@@ -127,6 +124,7 @@
 			</div>
 		</section>
 		<%- include('./layout/footer') %>
+		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/contactus.js"></script>
 		<script src="javascripts/common.js"></script>
 		<script src="javascripts/chatbot.js"></script>
