--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -215,6 +215,7 @@ This program focuses on strengthening the students conceptual clarity of the fun
 
 		<%- include('./layout/footer') %>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/common.js"></script>
 		<script src="javascripts/courses.js"></script>
 		<script src="javascripts/chatbot.js"></script>
