--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -690,6 +690,7 @@
 		<%- include('./layout/footer') %>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/common.js"></script>
 		<script src="javascripts/courses.js"></script>
 		<script src="javascripts/chatbot.js"></script>
