--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -14,8 +14,7 @@
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 	</head>
 	<body>
-		<%- include('./layout/header') %>
-		<%- include('./chatbot') %>
+		<%- include('./layout/header') %> <%- include('./chatbot') %>
 		<section class="secMain">
 			<img class="vector" src="../images/successStories/Vector8.png" alt="" />
 			<div class="cardMain">
@@ -40,6 +39,7 @@
 			<!-- <img class="vector" src="../images/successStories/Vector 9.png" alt="" /> -->
 		</section>
 		<%- include('./layout/footer') %>
+		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/common.js"></script>
 		<script src="javascripts/chatbot.js"></script>
 	</body>
