--- a/views/admin/home/neetAchievements.ejs
+++ b/views/admin/home/neetAchievements.ejs
@@ -108,7 +108,7 @@
 				>
 					<h1 class="m-5">Neet Achievements</h1>
 
-					<table class="table" style="width: 70%; height: 30vh">
+					<table class="table" style="width: 70%;">
 						<thead>
 							<tr>
 								<th scope="col">Seats</th>
