--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="stylesheets/nav.css">
+<script src="javascripts/nav.js"></script>
+<script src="javascripts/common.js"></script>
 <header class="header-area">
 	<!-- site-navbar start -->
 	<div class="navbar-area">
