--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -10,7 +10,7 @@ body.dark {
 }
 .Getyourvideos::after {
 	content: '';
-	position: absolute;
+	/* position: absolute; */
 	top: 0;
 	left: 0;
 	width: 100%;
