--- a/views/admin/demovideos/Demovideos.ejs
+++ b/views/admin/demovideos/Demovideos.ejs
@@ -61,7 +61,7 @@
 				<form
 					action="/admin/demovideos?_method=DELETE"
 					method="post"
-					class="imgform latestupdateform"
+					class="imgform demoVideosForm"
 				>
 					<h1 class="m-5">Demo Vedios</h1>
 
