--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -107,42 +107,44 @@
 								class="form-control"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
-								id="uploadlink"
-								value="<%= i.name %> "
+								id="editname uploadlink"
 							/>
+							</div>
+							<div class="input-group d-flex flex-nowrap" style="width: 80%">
 							<input
 								type="file"
 								name="studentimg"
 								class="form-control"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
-								id="uploadlink"
-								value="<%= i.studentimg %> "
+								id="editstudentimg uploadlink"
 							/>
+							</div>
+							<div class="input-group d-flex flex-nowrap" style="width: 80%">
 							<input
 								type="text"
 								name="collegeName"
 								class="form-control"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
-								id="uploadlink"
-								value="<%= i.collegename %> "
+								id="editcollegename uploadlink"
 							/>
+							</div>
+							<div class="input-group d-flex flex-nowrap" style="width: 80%">
 							<input
 								type="number"
 								name="score"
 								class="form-control"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
-								id="uploadlink"
-								placeholder="score"
-								value="<%= i.score %> "
+								id="editscore"
+								placeholder="score uploadlink"
 							/>
-						</div>
+							</div>
 						<div>
 							<button
 								type="button"
-								class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+								class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn2"
 							>
 								Back
 							</button>/
