--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -397,19 +397,18 @@ iframe {
 	height: 100%;
 }
 
-button {
+/* button {
 	position: absolute;
 	top: 50%;
 	border: none;
 	background: #fff;
 	color: #000000;
-	/* padding: 10px 15px; */
 	margin-top: -25px;
 	font-size: 30px;
 	z-index: 1000;
 	font-weight: 900;
 	transition: 0.5s ease-in-out;
-}
+} */
 
 .prev {
 	left: -100px;
