--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -107,6 +107,7 @@
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 			crossorigin="anonymous"
 		></script>
+		<script src="javascripts/nav.js"></script>
 		<script src="../javascripts/courses.js"></script>
 		<script src="../javascripts/common.js"></script>
 		<%- include('./layout/footer') %>
