--- a/views/results.ejs
+++ b/views/results.ejs
@@ -19,9 +19,18 @@
 			<!-- Additional required wrapper -->
 			<div class="swiper-wrapper">
 				<!-- Slides -->
-				<div class="swiper-slide">Slide 1</div>
-				<div class="swiper-slide">Slide 2</div>
-				<div class="swiper-slide">Slide 3</div>
+				<div class="swiper-slide">
+					<img src="images/GALLERY/2019/2019img1.jpg" alt="" />
+				</div>
+				<div class="swiper-slide">
+					<img src="images/GALLERY/2019/2019img2.jpg" alt="" />
+				</div>
+				<div class="swiper-slide">
+					<img src="images/GALLERY/2019/2019img3.jpg" alt="" />
+				</div>
+				<div class="swiper-slide">
+					<img src="images/GALLERY/2019/2019img4.jpg" alt="" />
+				</div>
 				...
 			</div>
 			<!-- If we need pagination -->
@@ -121,10 +130,10 @@
 
 		<%- include('./layout/footer') %>
 
+		<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 		<script src="javascripts/results.js"></script>
 		<script src="javascripts/nav.js"></script>
 		<!-- <script src="javascripts/common.js"></script> -->
-		<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 		<script src="javascripts/chatbot.js"></script>
 	</body>
 </html>
