--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -21,7 +21,8 @@
 		<title>Demo Videos</title>
 	</head>
 	<body>
-		<%- include('./layout/header') %> <%- include('./chatbot') %>
+		<%- include('./layout/header') %>
+		    <%- include('./chatbot') %>
 
 		<section class="Getyourvideos">
 			<!-- <div class="video">
