--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -7,7 +7,7 @@
 			<nav class="site-navbar">
 				<!-- site logo -->
 				<a href="/" class="site-logo"><img draggable="false" class="site-logo-img"
-						src="images/home/classic-nee-tacademy-logo.png" alt=""></a>
+						src="images/home/logo.png" alt=""></a>
 				<!-- site menu/nav -->
 				<ul>
 					<li><a class="even" href="/">Home</a></li>
