--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -104,40 +104,40 @@
 							<input
 								type="text"
 								name="name"
-								class="form-control"
+								class="form-control editname"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
-								id="editname uploadlink"
+								id=" uploadlink"
 							/>
 							</div>
 							<div class="input-group d-flex flex-nowrap" style="width: 80%">
 							<input
 								type="file"
 								name="studentimg"
-								class="form-control"
+								class="form-control editstudentimg"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
-								id="editstudentimg uploadlink"
+								id=" uploadlink"
 							/>
 							</div>
 							<div class="input-group d-flex flex-nowrap" style="width: 80%">
 							<input
 								type="text"
 								name="collegeName"
-								class="form-control"
+								class="form-control editcollegename"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
-								id="editcollegename uploadlink"
+								id=" uploadlink"
 							/>
 							</div>
 							<div class="input-group d-flex flex-nowrap" style="width: 80%">
 							<input
 								type="number"
 								name="score"
-								class="form-control"
+								class="form-control editscore"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
-								id="editscore"
+								id=" uploadlink"
 								placeholder="score uploadlink"
 							/>
 							</div>
