--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -29,8 +29,8 @@
 								/>
 							</svg>
 							<p>
-								1/1, First Floor, PS Square, KHS Hospital Road, Opp. to
-								Ponnuswamy Gounder Kalyana Mandapam, Salem - 4
+								1/1, First Floor, PS Square, KHS Hospital Road, <br />
+								Opp. to Ponnuswamy Gounder Kalyana Mandapam, Salem - 4
 							</p>
 						</div>
 						<div class="phone">
