--- a/public/stylesheets/contactus.css
+++ b/public/stylesheets/contactus.css
@@ -54,6 +54,18 @@ body.dark {
 	width: 5rem;
 }
 
+.location {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+}
+
+.location p {
+	width: 70%;
+}
+
 .right {
 	width: 50%;
 	height: 100%;
@@ -125,12 +137,19 @@ body.dark {
 	width: 45%;
 	border-radius: 20px;
 }
-.reset {
-	background-color: #3986be;
-}
+.reset,
 .submit {
-	background-color: #aaaaaa;
+	background-color: #3986be;
+	cursor: pointer;
+	transition: all 0.1s ease-in-out;
 }
+
+.reset:hover,
+.submit:hover {
+	background-color: white;
+	color: #3986be;
+}
+
 @media (max-width: 1000px) {
 	.left {
 		display: none;
