--- a/views/home.ejs
+++ b/views/home.ejs
@@ -251,8 +251,8 @@
 						<div class="bottom-drive">
 							<a
 								href="https://drive.google.com/file/d/1AekSeStzaqDFCfLAH372bR1bwTOs7ky2/view?usp=sharing">Download
-								Free Questions Bank for Neet 2021-
-								<span class="latestEdition">Latest edition 2021</span></a>
+								Free Questions Bank for Neet-
+								<span class="latestEdition">Latest edition</span></a>
 						</div>
 					</section>
 
