--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -8,149 +8,6 @@ body.dark {
 	height: 100vh;
 	background: url(../images/demo/demovideosbg.png) center/cover;
 }
-.Getyourvideos::after {
-	content: '';
-	/* position: absolute; */
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.2);
-	z-index: 1;
-}
-.video {
-	border: 2px solid black;
-	background-color: white;
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 40px;
-	font-size: 25px;
-	width: 35%;
-	height: 10vh;
-	top: 15%;
-	left: 33%;
-	z-index: 2;
-}
-.stream1 {
-	position: absolute;
-	top: 57%;
-	left: 21%;
-	z-index: 2;
-}
-.stream2 {
-	position: absolute;
-	top: 57%;
-	right: 21%;
-	z-index: 2;
-}
-.stream3 {
-	position: absolute;
-	top: 85%;
-	left: 30%;
-	z-index: 2;
-}
-.stream4 {
-	position: absolute;
-	top: 85%;
-	right: 30%;
-	z-index: 2;
-}
-p {
-	/* margin-top: 0; */
-	margin-bottom: 0rem !important;
-}
-
-select,
-.stream3 button,
-.stream4 button {
-	padding: 0.8rem 4rem;
-	border-radius: 40px !important;
-	border: 2px solid black;
-	font-size: 25px !important;
-}
-
-.stream {
-	border: 2px solid black;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	width: 19%;
-	height: 9vh;
-}
-.stream button {
-	position: absolute;
-	left: 12%;
-}
-.stream span svg {
-	width: 60px;
-	height: 45px;
-	position: absolute;
-	right: 0%;
-}
-.subject span {
-	border: 2px solid black;
-	background-color: white;
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 25px;
-	width: 19%;
-	height: 9vh;
-	font-size: 23px;
-	top: 57%;
-	left: 60%;
-}
-.subject span p {
-	position: absolute;
-	left: 12%;
-}
-.subject span svg {
-	width: 60px;
-	height: 45px;
-	position: absolute;
-	right: 0%;
-}
-.submit {
-	border: 2px solid black;
-	background-color: white;
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 25px;
-	width: 15%;
-	height: 9vh;
-	font-size: 20px;
-	top: 85%;
-	left: 28%;
-}
-.submit p {
-	position: absolute;
-	left: 25%;
-}
-.reset {
-	border: 2px solid black;
-	background-color: white;
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 25px;
-	width: 15%;
-	height: 9vh;
-	font-size: 20px;
-	top: 85%;
-	left: 50%;
-}
-.reset {
-	position: absolute;
-	left: 56%;
-}
-
 .gridcontainer {
 	position: relative;
 	width: 100%;
@@ -177,7 +34,7 @@ iframe {
 }
 .griditem {
 	width: 90%;
-	height: 260px;
+	height: 195px;
 	padding: 0.5rem;
 	border: 15px solid #02c3d8;
 	border-radius: 20px 0px 20px 0px;
@@ -200,4 +57,15 @@ iframe {
 		width: 90%;
 		grid-template-columns: repeat(1, 1fr);
 	}
+}
+/* demovideos  */
+.gridbox {
+	border-radius: 14px;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: white;
+	border-radius: 30px 0 30px 0;
 }
