--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -1,71 +1,77 @@
 body.dark {
-	background-color: #181a1b;
-	color: white;
+  background-color: #181a1b;
+  color: white;
 }
 
 .Getyourvideos {
-	width: 100%;
-	height: 100vh;
-	background: url(../images/demo/demovideosbg.png) center/cover;
+  width: 100%;
+  height: 100vh;
+  background: url(../images/demo/demovideosbg.png) center/cover;
 }
 .gridcontainer {
-	position: relative;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	grid-row-gap: 3rem;
-	/* height: 120vh;     */
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	justify-items: center;
-	margin-top: 5rem;
-	margin-bottom: 5rem;
+  position: relative;
+  width: 100%;
+  /* margin-left: auto;
+	margin-right: auto; */
+  /* left: 50%;
+	transform: translateX(-35%); */
+  grid-row-gap: 3rem;
+  /* height: 120vh;     */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 .grid {
-	position: relative;
-	height: 10rem;
-	width: 30%;
-	border: 1px solid black;
-	display: flex;
-	align-items: center;
+  position: relative;
+  /* height: 10rem;
+	width: 30%; */
+  width: 100%;
+  border: 1px solid black;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+  align-items: center;
 }
 iframe {
-	z-index: 4;
+  z-index: 4;
 }
 .griditem {
-	width: 90%;
-	height: 195px;
-	padding: 0.5rem;
-	border: 15px solid #02c3d8;
-	border-radius: 20px 0px 20px 0px;
+  width: 100%;
+  height: 15rem;
+  padding: 0.5rem;
+  border: 15px solid #02c3d8;
+  margin: 5%;
+  border-radius: 20px 0px 20px 0px;
 }
 @media (max-width: 1100px) {
-	.gridcontainer {
-		grid-template-columns: repeat(2, 1fr);
-	}
+  .gridcontainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media (max-width: 800px) {
-	.gridcontainer {
-		width: 70%;
-		grid-template-columns: repeat(1, 1fr);
-	}
+  .gridcontainer {
+    width: 70%;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @media (max-width: 600px) {
-	.gridcontainer {
-		width: 90%;
-		grid-template-columns: repeat(1, 1fr);
-	}
+  .gridcontainer {
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 /* demovideos  */
 .gridbox {
-	border-radius: 14px;
-	height: 100%;
-	width: 100%;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	background-color: white;
-	border-radius: 30px 0 30px 0;
+  border-radius: 14px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  border-radius: 30px 0 30px 0;
 }
