--- a/public/stylesheets/successStories2.css
+++ b/public/stylesheets/successStories2.css
@@ -13,12 +13,41 @@ body.dark {
 	background-color: #181a1b;
 	color: white;
 }
+
 .vector {
+	position: relative;
+	top: -35px;
 	width: 100%;
-
-	/* height: 100%; */
+	background: url("../images/successStories/Vector8.png");
+	height: 25.5rem;
+	z-index: -1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
-
+.parentVector {
+	position: relative;
+	width: 100%;
+	/* height: 10rem; */
+	margin-bottom: 10%;
+	z-index: -1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.vector h1
+{
+	font-size: 3rem;
+	position: relative;
+	top: 15%;
+}
+.parentVector h1
+{
+	font-size: 3rem;
+	position: relative;
+}
 .cardMain {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
