--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -1,46 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="shortcut icon"
-			href="images/home/classic-nee-tacademy-logo.png"
-			type="image/x-icon"
-		/>
-		<link rel="stylesheet" href="../stylesheets/successStories2.css" />
-		<link rel="stylesheet" href="stylesheets/common.css" />
-		<link rel="stylesheet" href="stylesheets/chatbot.css" />
-	</head>
-	<body>
-		<%- include('./layout/header') %> <%- include('./chatbot') %>
-		<section class="secMain">
-			<img class="vector" src="../images/successStories/Vector8.png" alt="" />
-			<div class="cardMain">
-				<% students.forEach((student) => { %>
-				<div class="card">
-					<img class="profile" src="<%= student.studentimg %>" alt="" />
-					<h3><%= student.studentname %></h3>
-					<iframe
-						class="video"
-						width="560"
-						height="315"
-						src="<%= student.youtubelink %>"
-						title="YouTube video player"
-						frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen
-					></iframe>
-				</div>
-				<% }) %>
-			</div>
 
-			<!-- <img class="vector" src="../images/successStories/Vector 9.png" alt="" /> -->
-		</section>
-		<%- include('./layout/footer') %>
-		<script src="javascripts/nav.js"></script>
-		<script src="javascripts/common.js"></script>
-		<script src="javascripts/chatbot.js"></script>
-	</body>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
+	<link rel="stylesheet" href="../stylesheets/successStories2.css" />
+	<link rel="stylesheet" href="stylesheets/common.css" />
+	<link rel="stylesheet" href="stylesheets/chatbot.css" />
+</head>
+
+<body>
+	<%- include('./layout/header') %>
+		<%- include('./chatbot') %>
+			<section class="secMain">
+				<div class="vector">
+					<h1>Student Testimonials</h1>
+				</div>
+				<!-- <img class="vector" src="../images/successStories/Vector8.png" alt="" /> -->
+				<div class="cardMain">
+					<% students.forEach((student)=> { %>
+						<div class="card">
+							<img class="profile" src="<%= student.studentimg %>" alt="" />
+							<h3>
+								<%= student.studentname %>
+							</h3>
+							<iframe class="video" width="560" height="315" src="<%= student.youtubelink %>"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</div>
+						<% }) %>
+				</div>
+				<!-- <img class="vector" src="../images/successStories/Vector 9.png" alt="" /> -->
+			</section>
+			<section class="secMain">
+				<div class="parentVector">
+					<h1>Parent Testimonials</h1>
+				</div>
+				<div class="cardMain">
+					<% parenttestimonials.forEach((student)=> { %>
+						<div class="card">
+							<img class="profile" src="<%= student.studentimg %>" alt="" />
+							<h3>
+								<%= student.studentname %>
+							</h3>
+							<iframe class="video" width="560" height="315" src="<%= student.youtubelink %>"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</div>
+						<% }) %>
+				</div>
+			</section>
+			<%- include('./layout/footer') %>
+				<script src="javascripts/nav.js"></script>
+				<script src="javascripts/common.js"></script>
+				<script src="javascripts/chatbot.js"></script>
+</body>
+
 </html>
